Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10845

Server crashes in sync_array_cell_print with innodb-status-file

    XMLWordPrintable

Details

    Description

      perl ./mtr innodb.innodb-change-buffer-recovery --mysqld=--innodb-status-file=1
      

      Stack trace from 3da077a6ec

      #3  <signal handler called>
      #4  0x00007fe29a8eb31f in sync_array_cell_print (file=0x7fe297055d00, cell=0x7fe2927b2080, reserver=0x0) at /data/src/10.2/storage/innobase/sync/sync0arr.cc:604
      #5  0x00007fe29a8ec799 in sync_array_print_info_low (file=0x7fe297055d00, arr=0x7fe29706d3a0) at /data/src/10.2/storage/innobase/sync/sync0arr.cc:1317
      #6  0x00007fe29a8ec805 in sync_array_print_info (file=0x7fe297055d00, arr=0x7fe29706d3a0) at /data/src/10.2/storage/innobase/sync/sync0arr.cc:1333
      #7  0x00007fe29a8eca45 in sync_array_print (file=0x7fe297055d00) at /data/src/10.2/storage/innobase/sync/sync0arr.cc:1384
      #8  0x00007fe29a902b98 in sync_print (file=0x7fe297055d00) at /data/src/10.2/storage/innobase/sync/sync0sync.cc:173
      #9  0x00007fe29a8d9f51 in srv_printf_innodb_monitor (file=0x7fe297055d00, nowait=1, trx_start_pos=0x0, trx_end=0x0) at /data/src/10.2/storage/innobase/srv/srv0srv.cc:1296
      #10 0x00007fe29a8db2af in srv_monitor_thread (arg=0x0) at /data/src/10.2/storage/innobase/srv/srv0srv.cc:1807
      #11 0x00007fe2998f60a4 in start_thread (arg=0x7fe27a7fd700) at pthread_create.c:309
      #12 0x00007fe297aae87d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.