MDEV-10845 - 10.2 server crashes with --innodb-status-file, disable it for now